--- a/index.html
+++ b/index.html
@@ -11,13 +11,18 @@
 </head>
 
 <body>
-
-    <div class="header">
+    <ul id="nav">
+        <li><a href="#header">Welcome</a></li>
+        <li><a href="#section-1">Programs</a></li>
+        <li><a href="#section_2">Innovate</a></li>
+        <li><a href="#section-3">Potencial</a></li>
+    </ul>
+    <div class="header" id="header">
         <h1>Welcome to </h1>
         <h1>the creative after-school</h1>
     </div>
 
-    <div class="row">
+    <div class="row" id="section-1">
         <div class="two-column">
             <h2>Our enrichment programs boost your kid to a brighter future</h2>
             <p>Embark your kid into an inspirational journey of fun and discovery throught a hands-on approach.</p>
@@ -50,7 +55,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row" id="section-3">
         <div class="two-column">
             <img src="img/section-3.png" alt="imagen de la seccion 3">
         </div>
@@ -98,7 +103,20 @@
             <p>The Studio</p>
         </div>
     </div>
+    <script>
+        // When the user scrolls down 50px from the top of the document, resize the header's font size
+        window.onscroll = function() {
+            scrollFunction()
+        };
 
+        function scrollFunction() {
+            if (document.body.scrollTop > 50 || document.documentElement.scrollTop > 50) {
+                document.getElementById("nav").style.backgroundColor = "white";
+            } else {
+                document.getElementById("nav").style.backgroundColor = "rgba(0,0,0,0.0)";
+            }
+        }
+    </script>
 </body>
 
 </html>
